2005-08-03  Florian Boor <florian@kernelconcepts.de>

	* Version 0.80 released.
	* X11/gpe-login.pre-session: Sorted sections by device type.
                                     Add Collie backlight and audio devices.

2005-08-31  Rene Wagner <rw@handhelds.org>

	* X11/gpe-login.pre-session: Apply pre-session-ramdisk.patch from OE.
	                             also check if /media/ram is available.

2005-07-29  Florian Boor <florian@kernelconcepts.de>

	* Version 0.79 released.
	* X11/gpe-login.pre-session: Change owner of sysclass backlight
                                     devices on Nokia 770.

2005-07-02  Florian Boor <florian@kernelconcepts.de>

	* Version 0.78 released.
	* gpe-login.c (main): Fixed wrong packing which caused in missing xkbd.
	
2005-06-24  Florian Boor <florian@kernelconcepts.de>

	* Version 0.77 released.

2005-06-20  Florian Boor <florian@kernelconcepts.de>

	* X11/gpe-login.pre-session: Change owner of sysclass backlight
                                     devices.

2005-02-28  Philip Blundell  <philb@gnu.org>

	* Version 0.76 released.
	
2005-02-28  Philip Blundell  <philb@gnu.org>

	* gpe-login.c (main): Fix warning.

	* Makefile: Use Makefile.translation-auto-linguas.

	* po/vi.po: New file, courtesy Clytie Siddall.

2005-02-23  Chris Lord  <cwiiis@handhelds.org>

	* gpe-login.c: Add recalibration on a long stylus-press

2005-01-03  Phil Blundell  <philb@gnu.org>

	* Version 0.75 released.

2005-01-03  Phil Blundell  <philb@gnu.org>

	* gpe-login.c (main): Fix cut and paste error.

2005-01-03  Phil Blundell  <philb@gnu.org>

	* Version 0.74 released.

2005-01-03  Phil Blundell  <philb@gnu.org>

	* gpe-login.c (main): Don't use gpe_application_init.

2005-01-01  Luc Pionchon  <luc@handhelds.org>

	* gpe-login.c (build_root_password_box): remove markup from i18n'ed strings.
	(build_new_user_box): Likewise.

2004-11-07  Phil Blundell  <pb@nexus.co.uk>

	* Makefile (LINGUAS): Add zh_CN.
	* po/zh_CN.po: New file, courtesy Meng Jie.
